--- a/app.ipynb
+++ b/app.ipynb
@@ -308,22 +308,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<_PrefetchDataset element_spec=(TensorSpec(shape=(None,), dtype=tf.string, name=None), TensorSpec(shape=(None,), dtype=tf.int32, name=None))>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([1 1 1 1 0 1 0 1 1 0 1 0 0 0 0 0 1 0 0 0 0 1 0 1 0 0 0 1 0 0 0 0], shape=(32,), dtype=int32)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-11 14:40:56.793634: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
     }
    ],
    "source": [
-    "raw_train_ds"
+    "for i , j in raw_train_ds.take(1):\n",
+    "    print(j)\n",
+    "\n",
+    "# here raw_train_ds contains multiple batches of size 32\n",
+    "# each batch contains 2 tensors\n",
+    "# i is the tensor of 32 strings, and j is a tensor containing 32 labels\n",
+    "# a tensor abc, can be converted into a numpy array using abc.numpy()"
    ]
   },
   {
@@ -368,7 +378,226 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) We'll remove the html tags present in the text strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import string\n",
+    "\n",
+    "def custom_standardization(input_data):\n",
+    "    lowercase = tf.strings.lower(input_data)\n",
+    "    stripped_html = tf.strings.regex_replace(lowercase, \"<br />\", \" \")                          #replace br tags with space\n",
+    "    return tf.strings.regex_replace(stripped_html, \"[%s]\" % re.escape(string.punctuation), \"\")  #remove punctuations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Now create a vectorisation layer that'll standardise, tokenise, vectorise our data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_features = 10000\n",
+    "sequence_length = 250\n",
+    "\n",
+    "vectorize_layer = tf.keras.layers.TextVectorization(                #A preprocessing layer which maps text features to integer sequences.\n",
+    "    standardize = custom_standardization,\n",
+    "    max_tokens = max_features,                      #Maximum size of the vocabulary for this layer\n",
+    "    output_mode = \"int\",\n",
+    "    output_sequence_length = sequence_length        #results in exact THIS length outputs\n",
+    ")\n",
+    "\n",
+    "#read this https://www.tensorflow.org/api_docs/python/tf/keras/layers/TextVectorization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Since we need to vectorize, we need to pass only-text dataset. ie remove labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-11 15:06:25.994330: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_text = raw_train_ds.map(lambda x, y: x)\n",
+    "vectorize_layer.adapt(train_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_dims = 16\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    vectorize_layer,\n",
+    "    tf.keras.layers.Embedding(max_features, embedding_dims),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.GlobalAveragePooling1D(),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(1, activation = \"sigmoid\")                #sigmoid, because binary classifier, no of class = 2\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer = \"adam\",\n",
+    "    loss = tf.keras.losses.BinaryCrossentropy(),\n",
+    "    metrics = ['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 10ms/step - accuracy: 0.5827 - loss: 0.6814 - val_accuracy: 0.7186 - val_loss: 0.6136\n",
+      "Epoch 2/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.7545 - loss: 0.5813 - val_accuracy: 0.8114 - val_loss: 0.5006\n",
+      "Epoch 3/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.8211 - loss: 0.4710 - val_accuracy: 0.8396 - val_loss: 0.4246\n",
+      "Epoch 4/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 10ms/step - accuracy: 0.8479 - loss: 0.4004 - val_accuracy: 0.8504 - val_loss: 0.3820\n",
+      "Epoch 5/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.8631 - loss: 0.3535 - val_accuracy: 0.8644 - val_loss: 0.3506\n",
+      "Epoch 6/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.8782 - loss: 0.3220 - val_accuracy: 0.8672 - val_loss: 0.3312\n",
+      "Epoch 7/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.8906 - loss: 0.2943 - val_accuracy: 0.8608 - val_loss: 0.3277\n",
+      "Epoch 8/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.8948 - loss: 0.2766 - val_accuracy: 0.8722 - val_loss: 0.3094\n",
+      "Epoch 9/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.9017 - loss: 0.2591 - val_accuracy: 0.8742 - val_loss: 0.3013\n",
+      "Epoch 10/10\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 9ms/step - accuracy: 0.9105 - loss: 0.2421 - val_accuracy: 0.8694 - val_loss: 0.3061\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x7f85ec94b0d0>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(raw_train_ds, validation_data = raw_val_ds, epochs = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "782/782 - 4s - 4ms/step - accuracy: 0.9064 - loss: 0.2453\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.24532447755336761, 0.9064000248908997]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(raw_test_ds, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predicting for solitary data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 17ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.40422457],\n",
+       "       [0.19741124]], dtype=float32)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "examples = tf.constant([                #Creates a constant tensor from a tensor-like object.\n",
+    "    \"i liked it\",\n",
+    "    \"That was horrible\"\n",
+    "])\n",
+    "\n",
+    "model.predict(examples)"
+   ]
   }
  ],
  "metadata": {
